--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "astro": "^4.3.5",
     "gsap": "^3.12.5",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-plugin-astro": "^0.31.4",
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0"
   }
 }
