--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/three": "^0.161.2",
     "eslint": "^8.56.0",
     "eslint-plugin-astro": "^0.31.4",
     "prettier": "^3.2.5",
-    "prettier-plugin-astro": "^0.13.0"
+    "prettier-plugin-astro": "^0.13.0",
+    "three": "^0.161.0"
   }
 }
